--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="keywords" content="mentoria de empreendedorismo, mentoria para advogados empreendedores, mentoria estratégica de negócios, mentoria raiz thalyta eloah, empreender com propósito, mentoria de negócios com identidade, como estruturar meu negócio, mentoria para negócios autênticos, marketing e posicionamento para advogados, mentoria para pequenos negócios, jornada empreendedora, mentoria online para empreendedores, como empreender de forma sustentável, estratégia de negócios para iniciantes, consultoria de negócios humanos, mentoria empresarial com valores, empreender sem fórmulas prontas, como precificar meus serviços, mentoria sobre mentalidade empreendedora, mentoria sobre empreendedorismo real, mentoria com acompanhamento individual, como construir autoridade profissional, mentoria com foco em identidade e verdade, mentorias personalizadas para empreendedores">
 <meta name="author" content="Thalita eloah">
-<link rel="canonical" href="https://MentoriaRaiz.vercel.app/" />
+<link rel="canonical" href="https://www.mentoriaraiz.com.br/" />
 <meta property="og:title" content="Mentoria Raiz | Empreender com verdade não é utopia. É raiz, é realidade é possivel" />
 <meta property="og:description" content="Empreender exige mais do que técnica. É sobre decisão, estratégia e coragem. A mentoria Raiz nasce como um espaço seguro, prático e profundo, para quem quer empreender com estratégia e propósito, sem perder a lucidez da vida real." />
-<meta property="og:image" content="https://stefannivideomaker.vercel.app/imagens/preview.jpg" />
-<meta property="og:url" content="https://MentoriaRaiz.vercel.app/" />
+<meta property="og:image" content="https://i.postimg.cc/FRB6v5t6/mentoria.png" />
+<meta property="og:url" content="https://www.mentoriaraiz.com.br/" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Mentoria Raiz | Empreender com verdade não é utopia. É raiz, é realidade é possivel">
 <meta name="twitter:description" content="Empreender exige mais do que técnica. É sobre decisão, estratégia e coragem. A mentoria Raiz nasce como um espaço seguro, prático e profundo, para quem quer empreender com estratégia e propósito, sem perder a lucidez da vida real.">
-
-
-    <title>Mentoria Raiz | Thalita eloah</title>
+<meta name="google-site-verification" content="HRqLWljJguIFf0qHrSsg8FkLaSu9wcMoUBc66RUKb_0" />
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://www.mentoriaraiz.com.br/">
+    <title>Mentoria Raiz | Thalyta eloah</title>
   </head>
   <body>
     <div id="root"></div>
