--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="google-site-verification" content="HRqLWljJguIFf0qHrSsg8FkLaSu9wcMoUBc66RUKb_0" />
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://www.mentoriaraiz.com.br/">
-    <title>Mentoria Raiz | Thalyta eloah</title>
+    <title>Mentoria Raiz | Thalyta Eloah</title>
   </head>
   <body>
     <div id="root"></div>
